syntax = "proto3";
package gateway.v1;
option go_package="grpc-notes/protos/gatewayapis/gateway/v1;gatewayv1";

import "google/api/annotations.proto";
import "validate/validate.proto";



service ProbeService {
    rpc Ping (PingRequest) returns (PingResponse){   
        option (google.api.http) = {
            post: "/gateway/v1/probe/ping"
            body:"*"
        };
    }
    rpc Detect (DetectRequest) returns (DetectResponse);
}

message PingRequest {
    string msg = 1 [(validate.rules).string.max_len=5];
}
message PingResponse {
    string msg = 1 [(validate.rules).string={min_len: 5, max_len: 10}];
}

message DetectRequest {
    int32 id=1 [(validate.rules).int32.gte=10];
}

message DetectResponse {
    int32 id=1 [(validate.rules).int32={gte: 5, lt: 10}];
}

